# androozoo_downloader

./: README.md  download.py  pyproject.toml  test_download.py
androzoo/: README.md  __init__.py  app.py  cli.py  core.py  pyproject.toml  test_download.py
androzoo/ui/: app.py
downloader/: download.py
ui/: app.py
ui/assets/: app.js  index.html  styles.css
